<resources>
    <string name="app_name">Telemedicine</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="textView_welcome">Welcome</string>
    <string name="textView_lorem">Lorem ipsum dolor sit amet, conse ctetur
        adipiscing elit. Ut enim ad veni am, quis nostrud exercitation ullamco</string>
    <string name="textView_urgent">URGENT</string>
    <string name="textView_telemedicine">Telemedicine</string>
    <string name="textView_requestApproved">Your Request Has Been Approved</string>
    <string name="textView_reqDetails">Request details</string>
    <string name="telemedicine">Telemedicine</string>
    <string name="email_adress">Email Address</string>
    <string name="password">Password</string>

    <!--Strings for Output -->
    <string name="output_name">Name</string>
    <string name="output_desease">Desease</string>
    <string name="output_location">Location</string>
    <string name="output_description">Desciption (Optional)</string>
    <string name="titleBar">Home</string>

    <!--Strings for Input -->
    <string name="input_yourName">Your Name</string>
    <string name="input_yourDesease">What is your illness</string>
    <string name="input_yourLocation">Where your location</string>
    <string name="input_yourDescription">Describe Here</string>

    <!--Strings for Button Description (contentDescription)-->
    <string name="description_send_requst">Send request with Data on the Server</string>
    <string name="description_very_urgent">By clicking on this button, your request will by processed
faster</string>
    <string name="description_home_button">Button that passes to home screen</string>
    <string name="description_notification_button">Button that passes to notification screen</string>
    <string name="description_add_button">Button that add anything</string>
    <string name="description_schedule_button">Button that passes to schedule screen</string>
    <string name="description_profile_button">Button that passes to profile screen</string>
    <string name="very_urgent">VERY URGENT</string>

    <string name="your_full_name">Your Full Name</string>
    <string name="your_email">Your Email</string>
    <string name="birthday">dd/mm/yy</string>
    <string name="phone_number">Your Phone Number</string>
    <string name="location">Your Location</string>
    <string name="CP_username">Your User Name</string>
    <string name="CP_password">Your Password</string>

</resources>





