<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context="com.example.zveri.telemedicine.MainActivity">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:text="@string/textView_welcome"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_lorem"
        android:layout_width="350dp"
        android:layout_height="121dp"
        android:text="@string/textView_lorem"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.52" />

    <TextView
        android:id="@+id/textView_urgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_urgent"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_entry"
        android:text="@string/btn_signup"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lorem"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/custom_entry"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/textView_urgent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
