<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:id="@+id/layout_root"
    tools:context="com.example.zveri.telemedicine.LoginActivity">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="45dp"
        android:text="@string/telemedicine"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/custom_text"
        android:hint="@string/email_adress"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/custom_icon"
        android:ems="10"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/pass"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginBottom="304dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_text"
        android:hint="@string/password"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/custom_icon2"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.507" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_login"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/greenColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_signup"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
