<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:weightSum="2"
    tools:context=".SignupActivity"
    >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center">

    </LinearLayout>

        <ImageView
            android:id="@+id/userPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="5.39"
            android:gravity="center"
            android:padding="20dp"
            app:srcCompat="@drawable/photo_add" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="Full Name"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>


        <EditText
            android:id="@+id/txt_name"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/your_full_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="Birthday"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_bday"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/birthday"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="Email"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_text"
            android:hint="@string/your_email"
            android:ems="10"
            android:inputType="textEmailAddress"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="Phone Number"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="Location/Address"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="321dp"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_text"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_reg_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_entry_green"
            android:text="Next"
            android:textColor="#ffffff" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>